# ppcc

./: pyproject.toml  training1.py  weather.csv  weather.py
